# == Metadata ==
[tool.poetry]
name = "api-sacre"
version = "0.1.0"
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# === Dependencies ===
[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.128.6"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
gunicorn = "^25.0.3"
pydantic-settings = "^2.12.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.46"}
asyncpg = "^0.31.0"
alembic = "^1.18.3"
orjson = "^3.11.7"

[dependency-groups]
development = [
    "ruff (>=0.15.0,<0.16.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "commitizen (>=4.13.8,<5.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
testing = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]

# === Ruff Configuration ===
[tool.ruff]
line-length = 99
target-version = "py312"
src = ["src"]
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    "*.egg-info",
    "dist",
    "build",
    "alembic/versions",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade (modern Python syntax)
    "B",      # flake8-bugbear (common bugs)
    "SIM",    # flake8-simplify
    "ASYNC",  # flake8-async
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# === Commitizen Configuration ===
[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
# Template for the commit message (header + body + optional footer)
message_template = """{{change_type}}{% if scope %}({{scope}}){% endif %}: {{message}}{% if body %}

{{ body[:1] | upper }}{{ body[1:] }}{% endif %}{% if footer %}

{{footer}}{% endif %}"""

# The schema to display with `cz schema`
schema = "<type>(<scope>): <description>\n\n<body>\n\n<footer>"

# Regex to validate the message with `cz check`:
# - Allowed types, without feat or fix.
# - Optional scope in parentheses.
# - Required short description.
# - Optional body (can be done with line breaks).
# - Optional footer, and if present, may contain BREAKING CHANGE.
schema_pattern = "^(docs|style|refactor|perf|test|build|ci|chore|revert|wip|add)(\\([^\\)]+\\))?:\\s.+?(\\n\\n[\\s\\S]+?)?(\\n\\nBREAKING CHANGE: [\\s\\S]+)?$"
change_type_order = ["wip", "add", "chore", "docs", "style", "refactor", "perf", "test", "build", "ci", "revert"]

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Seleccione el tipo de cambio que está implementando."
choices = [
  { value = "wip", name = "wip: Trabajo en progreso, marca un registro temporal de una funcionalidad incompleta." },
  { value = "add", name = "add: Añadir una nuevo cambio o característica." },
  { value = "chore", name = "chore: Tareas de mantenimiento que no modifica la lógica de una funcionalidad." },
  { value = "docs", name = "docs: Cambios en la documentación, guías, README, comentarios de ódigo, etc." },
  { value = "style", name = "style: Cambios que afectan la apariencia del código (formato) sin cambiar la lógica." },
  { value = "refactor", name = "refactor: Cambios en el código que no alteran una funcionalidad pero mejora la estructura, legibilidad o mantenibilidad." },
  { value = "perf", name = "perf: Cambios cuyo objetivo principal es mejorar rendimiento." },
  { value = "test", name = "test: Añadir, modificar o arreglar pruebas automatizadas." },
  { value = "build", name = "build: Cambios que afectan el sistema de compilación, empaquetado o dependencias." },
  { value = "ci", name = "ci: Cambios en la configuración de integración continua (pipelines o workflows)." },
  { value = "revert", name = "revert: Revertir un commit previo." }
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "scope"
message = '¿Cuál es el "scope" de este cambio? (opcional): '
default = ""

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = """
------------------------------------------------------
  RECORDATORIO: ¡Revisa tu ortografía y gramática! 
  Una buena redacción facilita la lectura del historial.
  ------------------------------------------------------

  Escriba una breve descripción imperativa del cambio: """

[[tool.commitizen.customize.questions]]
type = "input"
name = "body"
message = "Proporcione una descripción más detallada. (opcional): "
default = ""

[[tool.commitizen.customize.questions]]
type = "input"
name = "breaking_description"
message = 'Proporcione una descripción para el "BREAKING CHANGE". (opcional): '
default = ""

# === Mypy Configuration ===
[tool.mypy]
python_version = "3.12"
strict = false
show_error_codes = true
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
pretty = true
exclude = [
    ".venv",
    "venv",
    "__pycache__",
    ".git",
    "dist",
    "build",
    ".mypy_cache",
    "alembic/versions",
]